--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html lang="en" class="no-js">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+<head>  
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+       
+        <meta name="description" content=" " />
+        <meta name="keywords" content=" " />
+        <meta name="author" content=" Website is created by Shekhar Prasad Rajak" />
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Sofia" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Berkshire+Swash" />
 
@@ -37,7 +41,7 @@
 			});
 
 		</script>
-	<title>Vertical Fixed Navigation</title>
+	<title>Swaran Jain & Associates</title>
 </head>
 <body>
 	<nav id="cd-vertical-nav">
