Adding all sections complete

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 	</section><!-- cd-section -->
 	<section id="about" class= "cd-section  parallax_section " data-speed="10">
     
-    <div class="main-subtitle wow fadeIn" data-wow-delay="1.9s">
+    <div class="about-subtitle wow fadeIn" data-wow-delay="1.5s">
+    <span class="about-title"> About us </span>
     <strong>Swaran Jain & Associates, <strong>a Company Secretary firm was established in Aug, 2002 with an objective of providing Corporate and Business Advisory Services to Corporate Clients so as to enable them to comply with Corporate Laws and adopt practices of good Corporate Governance.
 <br>
 Our team is committed to meet the challenges of the corporate sector in the 21st Century. The firm represents a combination of specialized skills, which are geared to offer sound financial advice and personalized proactive services. Those associated with the firm have regular interaction with industry and other professionals which enables the firm to keep pace with contemporary developments and to meet the needs of its clients.
